tests/snapshots/test__key_space_step.snap
---
source: tests/test.rs
expression: "app.press(' ')"
---
0000OCTAGON00000                                                                
      0000                                                                      
    00000000                                                                    
  00        00                                                                  
0000        0000                                                                
0000        0000                                                                
  00        00                                                                  
    00000000                                                                    
      0000
